vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_array_decompose.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_array_decompose.vv:6:40: error: expression evaluated but not used
    4 | 
    5 | fn main() {
    6 |     collect(...[$embed_file(@FILE).path]).len
      |                                           ~~~
    7 | }
