vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_array_decompose.vv
fn collect(xs ...string) string {
	return xs.join('')
}

fn main() {
	collect(...[$embed_file(@FILE).path]).len
}
